@@ -123,6 +123,7 @@ This feature was developed by Aman Pandey as part of the Google Summer of Code p
  * Ensure userbar dialog can sit above other website content (LB (Ben) Johnston)
  * Fix preview panel loading issues (Sage Abdullah)
  * Fix `search_promotions` `0004_copy_queries` migration for long-lived Wagtail instances (Sage Abdullah)
+ * Guard against `TypeError` in `0088_fix_log_entry_json_timestamps` migration (Sage Abdullah)
 
 ### Documentation
 
